fix: center align donate button

--- a/src/Views/Form/Templates/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/form.scss
@@ -976,7 +976,7 @@ p {
 		&.give-single-gateway-wrap {
 			background: none;
 			padding: 0;
-			margin: 0 20px;
+			margin: -10px 20px 0 20px;
 		}
 	}
 
@@ -1009,25 +1009,25 @@ p {
 	#donate-fieldset {
 		display: flex;
 		flex-direction: column;
+	}
 
-		.give-submit-button-wrap {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			position: relative;
-			order: 3;
+	.give-submit-button-wrap {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: relative;
+		order: 3;
 
-			.sequoia-loader {
-				height: 30px;
-				width: 30px;
-				bottom: 32px;
-				position: absolute;
-				font-size: 4px;
-			}
+		.sequoia-loader {
+			height: 30px;
+			width: 30px;
+			bottom: 32px;
+			position: absolute;
+			font-size: 4px;
+		}
 
-			.give-submit:not(:disabled) + .sequoia-loader {
-				display: none;
-			}
+		.give-submit:not(:disabled) + .sequoia-loader {
+			display: none;
 		}
 	}
 }
